--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2357,6 +2357,14 @@ Responsive Media Querries
 
 }
 
+/* -------------------------------------------------------------------------------------- */
+@media (max-width: 445px) {
+	.col-sm-6 .col-md-3 .col-lg-3 {
+	}
+}
+
+
+
 /* -------------------------------------------------------------------
 Multi-columns-row
 ------------------------------------------------------------------- */
