--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ Marcos Bort - Portfolio
 :root {
 	--font-00: "Roboto Condensed", sans-serif;
 	--font-01: 'Questrial', sans-serif;
+	--font-02: 'Oswald', sans-serif;
 }
 
 
@@ -713,6 +714,7 @@ blockquote {
 	/* font-family: Volkhov, "Times New Roman", sans-serif; */
 	/* font-style: italic; */
 	font-family: var(--font-01);
+	/* font-weight: 200; */
 }
 
 .large-text {
@@ -919,6 +921,26 @@ Home Section
 	color: #fff;
 	margin: 0 5px 0 0;
 }
+
+
+/* -------------------------------------------------------------------
+About
+------------------------------------------------------------------- */
+.about-photo__box {
+	display: flex;
+}
+
+.about-photo {
+	width: 32%;
+	overflow: hidden;
+	margin: 0px auto;
+	margin-top: -20px;
+	margin-bottom: 50px;
+	border: 4px solid black;
+}
+
+
+
 
 /* -------------------------------------------------------------------
 Sections
