--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -717,7 +717,7 @@ blockquote {
 }
 
 .large-text {
-	font-size: 24px !important;
+	font-size: 20px !important;
 }
 
 .rotate {
@@ -1104,10 +1104,12 @@ Services, Content box
 	margin: 10px 0 15px;
 }
 
+
 .alt-features-item {
 	position: relative;
 	padding-left: 55px;
 	margin: 65px 0 0 0;
+	width: 150px;
 }
 
 .alt-features-icon {
@@ -1442,6 +1444,7 @@ Portfolio
 }
 
 /* Work item white background*/
+
 
 .works-grid.works-hover-w .work-title {
 	color: #111;
@@ -2571,5 +2574,51 @@ Vertival margin, padding
 	.mb-xs-70 {margin-bottom:70px !important}
 	.mb-xs-80 {margin-bottom:80px !important}
 
+}
+
+/* Container */
+@media (min-width:768px) {
+	.container {
+	 /* width:750px; */
+	 width:700px !important;
+	}
+	
+}
+@media (min-width:992px) {
+.container {
+	/* width:970px */
+	width:900px !important;
+	}
+}
+@media (min-width:1200px) {
+.container {
+	/* width:1170px; */
+	width:1100px !important;
+	}
+}
+
+/* Icons Skills */
+@media (max-width:768px) {
+	.icon-tech {
+		width: 95px;
+	}
+	.features-title, .alt-features-title {
+		font-size: 12px;
+	}
+}
+@media (max-width:992px) {
+	.icon-tech {
+		width: 100px;
+	}
+	.features-title, .alt-features-title {
+		font-size: 13px;
+	}
+}
+@media (max-width:1200px) {
+	.icon-tech {
+		width: 115px;
+	}.features-title, .alt-features-title {
+		font-size: 14px;
+	}
 }
 
