--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1083,7 +1083,7 @@ Services, Content box
 ------------------------------------------------------------------- */
 
 .features-item {
-	margin: 10px 0 30px 0;
+	margin: 10px 0 35px 0;
 	text-align: center;
 }
 
@@ -1099,9 +1099,9 @@ Services, Content box
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	font-weight: 400;
-	font-size: 14px;
+	font-size: 12px;
 	color: #111;
-	margin: 10px 0 15px;
+	margin: 8px 0 8px;
 }
 
 
@@ -1327,7 +1327,7 @@ Portfolio
 	text-align: center;
 	list-style: none;
 	padding: 0;
-	margin: 0 0 70px;
+	margin: -25px 0 15px;
 }
 
 .filter > li {
@@ -2599,26 +2599,29 @@ Vertival margin, padding
 
 /* Icons Skills */
 @media (max-width:768px) {
-	.icon-tech {
-		width: 95px;
+	.icon-tech,
+	.icon-tech-design {
+		width: 100px;
 	}
 	.features-title, .alt-features-title {
 		font-size: 12px;
 	}
 }
 @media (max-width:992px) {
-	.icon-tech {
+	.icon-tech,
+	.icon-tech-design {
 		width: 100px;
 	}
 	.features-title, .alt-features-title {
-		font-size: 13px;
+		font-size: 12px;
 	}
 }
 @media (max-width:1200px) {
-	.icon-tech {
-		width: 115px;
+	.icon-tech,
+	.icon-tech-design {
+		width: 100px;
 	}.features-title, .alt-features-title {
-		font-size: 14px;
+		font-size: 12px;
 	}
 }
 
