--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -979,7 +979,7 @@ Sections
 	letter-spacing: 4px;
 	text-align: center;
 	font-weight: 400;
-	font-size: 30px;
+	font-size: 28px;
 	color: #111;
 	margin: 0 0 55px;
 }
@@ -1856,7 +1856,7 @@ Shop
 
 .navbar-custom .navbar-cart > a {
 	position: relative;
-	font-size: 12px;
+	font-size: 12px !important;
 }
 
 .navbar-custom .navbar-cart a:after {
@@ -2587,13 +2587,13 @@ Vertival margin, padding
 @media (min-width:992px) {
 .container {
 	/* width:970px */
-	width:900px !important;
+	width:920px !important;
 	}
 }
 @media (min-width:1200px) {
 .container {
 	/* width:1170px; */
-	width:1100px !important;
+	width:1120px !important;
 	}
 }
 
