--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,7 @@ a,
 /* Button style */
 
 .btn {
+	display: inline !important;
 	border-radius: 0;
 	font-family: "Roboto Condensed", sans-serif;
 	text-transform: uppercase;
@@ -235,9 +236,9 @@ a,
 }
 
 .btn.btn-round {
-	-webkit-border-radius: 2px;
-	   -moz-border-radius: 2px;
-	        border-radius: 2px;
+	-webkit-border-radius: 5px;
+	   -moz-border-radius: 5px;
+	        border-radius: 5px;
 }
 
 .btn.btn-circle {
@@ -934,8 +935,12 @@ About
 	margin: 0px auto;
 	margin-top: -20px;
 	margin-bottom: 50px;
-	/* border: 4px solid black; */
-	/* border-radius: 900px; */
+}
+
+.btn-cv {
+	width: 100%;
+	text-align: center;
+	margin: 80px 0 80px 0;
 }
 
 
@@ -984,8 +989,9 @@ Sections
 }
 
 .module-subtitle {
+	font-family: var(--font-01);
 	text-align: center;
-	font-size: 20px;
+	font-size: 18px !important;
 	color: #111;
 	margin-bottom: 40px;
 }
@@ -1276,7 +1282,7 @@ Video box
 	background-image: url("../images/1604486-1920.jpg");
   
 	/* Set a specific height */
-	min-height: 400px;
+	height: 360px;
   
 	/* Create the parallax scrolling effect */
 	background-attachment: fixed;
@@ -1326,7 +1332,7 @@ Portfolio
 	text-align: center;
 	list-style: none;
 	padding: 0;
-	margin: -25px 0 15px;
+	margin: -15px 0 15px;
 }
 
 .filter > li {
@@ -1341,6 +1347,7 @@ Portfolio
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	margin-bottom: 70px;
 }
 
 .works-grid.works-grid-gut {
@@ -1525,12 +1532,25 @@ Testimonials
 
 .testimonials-slider {
 	position: relative;
+	/* padding-top: 60px;
+	padding-bottom: 90px; */
+	padding-top: 90px;
+	padding-bottom: 120px;
+	color: white;
+	border-bottom: 1px solid rgb(194, 194, 194);
+}
+
+.bg-testimonials {
+	background-image: url("../images/testimonials-65.jpg");
 }
 
 .testimonial-text {
 	text-align: center;
 	font-style: normal;
-	font-size: 18px;
+	font-size: 17px;
+	font-family: var(--font-01);
+	font-weight: 200;
+	letter-spacing: 0px;
 }
 
 .testimonial-caption {
@@ -1543,7 +1563,7 @@ Testimonials
 }
 
 .testimonial-descr {
-	color: rgba(255, 255, 255, .5);
+	color: rgba(255, 255, 255, .6);
 	font-size: 11px;
 }
 
