--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,26 @@ video{
 }
 
 
+/* ------------------------------------------------------------------
+	Icons Box Skills
+------------------------------------------------------------------- */
+.features-item {
+	/* width: 120px; */
+	margin-bottom: 18px !important;
+}
+
+.features-title, .alt-features-title {
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: 400;
+	font-size: 12px;
+	color: #111;
+	margin: 4px 0 8px 0 !important;
+}
+
+
+
+
 /* Image post works */
 
 .module .bg-dark-60 {
@@ -925,6 +945,9 @@ Home Section
 /* -------------------------------------------------------------------
 About
 ------------------------------------------------------------------- */
+.about {
+}
+
 .about-photo__box {
 	display: flex;
 }
@@ -989,9 +1012,11 @@ Sections
 }
 
 .module-subtitle {
-	font-family: var(--font-01);
+	/* font-family: var(--font-01); */
+	font-family: var(--font-00);
 	text-align: center;
-	font-size: 18px !important;
+	/* font-size: 18px !important; */
+	font-size: 14px !important;
 	color: #111;
 	margin-bottom: 40px;
 }
