--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1394,6 +1394,12 @@ Services, Content box
 }
 
 
+/* .alt-features-item {
+	position: relative;
+	padding-left: 55px;
+	margin: 65px 0 0 0;
+	width: 150px;
+} */
 .alt-features-item {
 	position: relative;
 	padding-left: 55px;
@@ -2422,6 +2428,65 @@ Scroll to top
 Responsive Media Querries
 ------------------------------------------------------------------- */
 
+
+
+@media (max-width: 1200px) {
+
+	/* Features */
+
+	.alt-features-item {
+		margin: 20px 0 0;
+	}
+
+}
+
+@media (max-width: 1050px) {
+
+	/* Navbar */
+
+	.navbar-custom {
+		letter-spacing: 1px;
+	}
+
+}
+
+@media (max-width: 991px) {
+
+	/* Navbar */
+
+	.navbar-custom {
+		letter-spacing: 0;
+	}
+
+	/* Headers */
+
+	.hs-title-size-3 {
+		letter-spacing: 8px;
+		font-size: 36px;
+	}
+
+	.hs-title-size-4 {
+		letter-spacing: 12px;
+		font-size: 80px;
+	}
+
+	.work-item,
+	.works-grid-3 .work-item,
+	.container .works-grid-3 .work-item,
+	.works-grid-4 .work-item,
+	.works-grid-5 .work-item {
+		width: 50%;
+	}
+
+	/* Half-image */
+
+	.side-image {
+		position: relative;
+		height: 300px;
+	}
+
+}
+
 @media (min-width: 768px) {
 
 	.navbar-transparent {
@@ -2465,63 +2530,6 @@ Responsive Media Querries
 
 	.comment .comment {
 		margin-left: 75px;
-	}
-
-}
-
-@media (max-width: 1200px) {
-
-	/* Features */
-
-	.alt-features-item {
-		margin: 20px 0 0;
-	}
-
-}
-
-@media (max-width: 1050px) {
-
-	/* Navbar */
-
-	.navbar-custom {
-		letter-spacing: 1px;
-	}
-
-}
-
-@media (max-width: 991px) {
-
-	/* Navbar */
-
-	.navbar-custom {
-		letter-spacing: 0;
-	}
-
-	/* Headers */
-
-	.hs-title-size-3 {
-		letter-spacing: 8px;
-		font-size: 36px;
-	}
-
-	.hs-title-size-4 {
-		letter-spacing: 12px;
-		font-size: 38px;
-	}
-
-	.work-item,
-	.works-grid-3 .work-item,
-	.container .works-grid-3 .work-item,
-	.works-grid-4 .work-item,
-	.works-grid-5 .work-item {
-		width: 50%;
-	}
-
-	/* Half-image */
-
-	.side-image {
-		position: relative;
-		height: 300px;
 	}
 
 }
@@ -2629,7 +2637,7 @@ Responsive Media Querries
 
 	.hs-title-size-4 {
 		letter-spacing: 6px;
-		font-size: 28px;
+		font-size: 50px;
 	}
 
 	/* Features */
@@ -2725,15 +2733,34 @@ Responsive Media Querries
 		width: 100%;
 	}
 
+	.hs-title-size-4 {
+		letter-spacing: 6px;
+		font-size: 45px;
+	}
+
+
+
 }
 
+@media (max-width: 380px) {
 
+	.hs-title-size-4 {
+		letter-spacing: 6px;
+		font-size: 40px;
+	}
+	
+}
+
+@media (max-width: 360px) {
+
+	.hs-title-size-4 {
+		letter-spacing: 6px;
+		font-size: 38px;
+	}
+	
+}
 
 /* -------------------------------------------------------------------------------------- */
-@media (max-width: 445px) {
-	.col-sm-6 .col-md-3 .col-lg-3 {
-	}
-}
 
 
 
